--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "query-string": "^6.2.0",
     "react-cookies": "^0.1.0",
     "react-favicon": "0.0.14",
+    "react-select": "^2.1.1",
     "redux-mock-store": "^1.5.3",
     "typeface-roboto": "0.0.54",
     "webpack": "^4.19.1"
