--- a/Etap.Tests/Etap.Tests.csproj
+++ b/Etap.Tests/Etap.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Etap.Web\Etap.Web.csproj" />
+    <ProjectReference Include="..\CloudClientLibrary\CloudClientLibrary.csproj" />
   </ItemGroup>
 
 </Project>
