--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "deepmerge": "^2.2.1",
     "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "mdi-material-ui": "^5.4.0",
