--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-direct-import": "^0.5.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-es2015": "^6.24.1",
